RESOLVED SPACING ISSUES

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,8 +111,6 @@ h4{
 
 body {
   text-align: justify;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
   color: #5a5a5a;
 }
 
